fix reach out button being behind themes

--- a/src/sass/contact.scss
+++ b/src/sass/contact.scss
@@ -18,6 +18,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: 1;
 
     @media (max-width: sizes.$small-tablet) {
       padding: 0rem 2.5rem;
