--- a/src/sass/navbar.scss
+++ b/src/sass/navbar.scss
@@ -7,7 +7,7 @@
   position: fixed;
   inset: 0;
   padding: 2rem 5rem;
-  z-index: 2;
+  z-index: 5;
   box-shadow: 0px 10px 70px 0px colors.$shadow;
 
   @media (max-width: sizes.$small-tablet) {
@@ -88,7 +88,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        z-index: 0;
+        z-index: 2;
         overflow: hidden;
 
         @media (max-width: sizes.$tablet) and (orientation: landscape) {
@@ -102,7 +102,7 @@
           text-align: center;
           list-style: none;
           gap: 6rem;
-          z-index: 2;
+          z-index: 5;
 
           @media (max-width: sizes.$tablet) and (orientation: landscape) {
             flex-direction: row;
