--- a/src/sass/themes.scss
+++ b/src/sass/themes.scss
@@ -19,6 +19,11 @@
     }
   }
 
+  .theme-list-container {
+    position: relative;
+    z-index: 2;
+  }
+
   .theme-list {
     display: flex;
     flex-direction: column;
@@ -37,6 +42,7 @@
     bottom: 0;
     right: 0;
     width: 3rem;
+    z-index: 2;
 
     button {
       background: none;
@@ -57,65 +63,6 @@
         display: block;
         width: 0.1rem;
         height: 5rem;
-      }
-    }
-  }
-}
-
-.theme-container-hidden {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  margin-right: 1rem;
-  display: flex;
-  text-align: left;
-  align-items: center;
-
-  li {
-    button {
-      background: none;
-      border: none;
-      font-family: fonts.$MajorMono;
-      font-size: 2.2rem;
-    }
-  }
-
-  .theme-list {
-    display: none;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 4rem 2rem;
-    border-radius: 0.5rem;
-    margin-bottom: 3rem;
-    margin-right: 3rem;
-    list-style: none;
-  }
-
-  .toggle-button-container {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-
-    button {
-      background: none;
-      border: none;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      font-size: 2.6rem;
-
-      span {
-        margin: 1rem 0;
-        writing-mode: vertical-lr;
-      }
-
-      &::after {
-        content: "";
-        display: block;
-        width: 0.1rem;
-        height: 7rem;
       }
     }
   }
